--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "element-ui": "^2.11.0",
+    "marked": "^0.7.0",
+    "mavon-editor": "^2.7.5",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "element-ui": "^2.11.0"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
