--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "element-ui": "^2.11.0",
-    "marked": "^0.7.0",
     "mavon-editor": "^2.7.5",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
