--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "element-ui": "^2.11.0",
+    "lodash": "^4.17.15",
     "mavon-editor": "^2.7.5",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
